--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,7 @@ dependencies {
     /* Firebase*/
    implementation 'com.google.firebase:firebase-analytics:17.2.3'
    implementation 'com.google.firebase:firebase-auth:19.3.0'//Authentication
-   // implementation 'com.google.firebase:firebase-firestore:21.4.1'  //Cloud Firestore
+   implementation 'com.google.firebase:firebase-firestore:21.4.1'  //Cloud Firestore
     implementation	'com.google.firebase:firebase-database:19.2.1' // Realtime Database
 
 }
