--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
+            android:permission="com.google.firebase.auth.api.gms.permission.LAUNCH_FEDERATED_SIGN_IN"
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,4 +19,12 @@
         </activity>
     </application>
 
+
+
+
+
+
+
 </manifest>
+
+
