--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,18 +27,22 @@ android {
 dependencies {
     /* DEfault*/
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
     //implementation'com.google.android.gms:play-services:10.0.2'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'androidx.navigation:navigation-fragment:2.2.1'
+    implementation 'androidx.navigation:navigation-ui:2.2.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     /* Views*/
 
     /* Firebase*/
-   implementation 'com.google.firebase:firebase-analytics:17.2.3'
-   implementation 'com.google.firebase:firebase-auth:19.3.0'//Authentication
-   implementation 'com.google.firebase:firebase-firestore:21.4.1'  //Cloud Firestore
-    implementation	'com.google.firebase:firebase-database:19.2.1' // Realtime Database
+    implementation 'com.google.firebase:firebase-analytics:17.2.3'
+    implementation 'com.google.firebase:firebase-auth:19.3.0'//Authentication
+    implementation 'com.google.firebase:firebase-firestore:21.4.1'  //Cloud Firestore
+    implementation 'com.google.firebase:firebase-database:19.2.1' // Realtime Database
 
 }
