Ver: Auth + Opcoes

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,9 +43,11 @@ dependencies {
     /* Views*/
 
     /* Firebase*/
-    implementation 'com.google.firebase:firebase-analytics:17.2.3'
+    implementation 'com.firebaseui:firebase-ui-auth:6.2.0' //Auth
+    implementation 'com.google.firebase:firebase-auth:19.3.0' //Auth SDK
+    implementation 'com.google.firebase:firebase-analytics:17.3.0'
     implementation 'com.google.firebase:firebase-auth:19.3.0'//Authentication
-    implementation 'com.google.firebase:firebase-firestore:21.4.1'  //Cloud Firestore
+    implementation 'com.google.firebase:firebase-firestore:21.4.2'  //Cloud Firestore
     implementation 'com.google.firebase:firebase-database:19.2.1' // Realtime Database
 
 }
