--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,5 +50,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.3.0'//Authentication
     implementation 'com.google.firebase:firebase-firestore:21.4.2'  //Cloud Firestore
     implementation 'com.google.firebase:firebase-database:19.2.1' // Realtime Database
+    implementation 'com.google.firebase:firebase-storage:19.1.1'//Storage
 
 }
